--- a/index.html
+++ b/index.html
@@ -101,17 +101,20 @@
                     <p>Mobiles</p>
                 </div>
                 <div class="dress">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJqRZHhQuUdtzgEftmkBI_wQWlInokheE45Q&s">
+                    <img
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJqRZHhQuUdtzgEftmkBI_wQWlInokheE45Q&s">
                     <p>Fashion</p>
                 </div>
             </div>
             <div id="section2" class="section">
                 <div class="dress">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-WXhIudyoZfjyRu5oz3lvm564TSlDFpbR_A&s">
+                    <img
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-WXhIudyoZfjyRu5oz3lvm564TSlDFpbR_A&s">
                     <p>Electronics</p>
                 </div>
                 <div class="dress">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKqtcCSr-nSYnKQ1J51RfDFBsr-fdRIL-k3g&s">
+                    <img
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKqtcCSr-nSYnKQ1J51RfDFBsr-fdRIL-k3g&s">
                     <p>Home & Furniture</p>
                 </div>
                 <div class="dress">
@@ -125,11 +128,13 @@
                     <p>Flight Bookings</p>
                 </div>
                 <div class="dress">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR16jmqMH0phntDD7RjcNDRnKh4kHi0cbKGYw&s">
+                    <img
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR16jmqMH0phntDD7RjcNDRnKh4kHi0cbKGYw&s">
                     <p>Beauty, Toyes & More</p>
                 </div>
                 <div class="dress">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaUNe4EcxBHGhbi1blYJQ6Hxc6fiVY23is8w&s">
+                    <img
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaUNe4EcxBHGhbi1blYJQ6Hxc6fiVY23is8w&s">
                     <p>Two Wheelers</p>
                 </div>
             </div>
@@ -176,145 +181,145 @@
                 <p>There are wirwless products</p>
                 <p>50$</p>
             </div>
-            <div id="mouse"  class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqjmVSWj0HtHUcOYV5i31NaTIhx2r15M1S9w&s">
                 <h2 class="text_mouse">Mouse digital wired</h2>
                 <p>There are wirwless products</p>
                 <p>50$</p>
             </div>
-            <div  id="mouse" class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJNHtIr3-aMY894l-By-LYu2gv1clt5xv2nw&s">
                 <h2 class="text_mouse">Mouse digital wired</h2>
                 <p>There are wirwless products</p>
                 <p>50$</p>
             </div>
-            <div  id="mouse" class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTH0ANDutcF1NkuzgHVKXwhBuhMJiFv3yhqug&s">
                 <h2 class="text_mouse">Mouse digital wired</h2>
                 <p>There are wirwless products</p>
                 <p>50$</p>
             </div>
-            <div id="mouse"  class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUhw5nwG2VQKr971u3ATmBiJ9ZFY6gESyzlA&s">
                 <h2 class="text_mouse">Mouse digital wired</h2>
                 <p>There are wirwless products</p>
                 <p>50$</p>
             </div>
-            <div id="mouse"  class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRsdBS03vE-bG5xdj9--rWIzgOPHlCslmzr8g&s">
                 <h2 class="Jackets">Jackets</h2>
                 <p>There are wirwless products</p>
                 <p>50$</p>
             </div>
-            <div id="mouse"  class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSlnvxeEW3wZ7OEdr4kL2O8o30LjKKIvZqadg&s">
                 <h2 class="Jackets">Jackets</h2>
                 <p>There are wirwless products</p>
                 <p>50$</p>
             </div>
-            <div id="mouse"  class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_UF3eMi1GcCTbWpN5Yov8ic7AuJqiakohig&s">
                 <h2 class="Jackets">Jackets</h2>
                 <p>There are wirwless products</p>
                 <p>50$</p>
             </div>
-            <div id="mouse"  class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSiMX0OQRcX7HES7agvQ86IbN9LFFYsZZghEA&s">
                 <h2 class="Jackets">Jackets</h2>
                 <p>There are wirwless products</p>
                 <p>50$</p>
             </div>
-            <div id="mouse"  class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuliTUAg74qMW1JK4dDOddQ3d7ZBNMI8r-LQ&s">
                 <h2 class="Jackets">Jackets</h2>
                 <p>There are wirwless products</p>
                 <p>50$</p>
             </div>
-            <div id="mouse"  class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsOEUCW4zE3HAGHn7TSwn2SKn4TGWA3g5UcQ&s">
                 <h2 class="Jackets">Jackets</h2>
                 <p>There are wirwless products</p>
                 <p>50$</p>
             </div>
-            <div id="mouse"  class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSvtwgKOK2MNIUwM18-ejpFH25AwPmDFwdPg&s">
                 <h2 class="Jackets">Jackets</h2>
                 <p>There are wirwless products</p>
                 <p>50$</p>
             </div>
-            <div id="mouse"  class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRicWfCxiMgYFPAavPpXAxerEvHr_ER_peExg&s">
                 <h2 class="Jackets">Jackets</h2>
                 <p>There are wirwless products</p>
                 <p>50$</p>
             </div>
-            <div id="mouse"  class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQbcofvVdEr6FovBJMLpT7mR-Mk8ILr4WVkeg&s">
                 <h2 class="Jackets">Jackets</h2>
                 <p>There are wirwless products</p>
                 <p>50$</p>
             </div>
-            <div id="mouse"  class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdb2EkFgLAZxb6Am7hDHBmo4SqsxDBJhXiFg&s">
                 <h2 class="Jackets">Jackets</h2>
                 <p>There are wirwless products</p>
                 <p>50$</p>
             </div>
-            <div  id="mouse" class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqxyaayllpZrZWX7qlHmSeiy8qe6EQLH0Hgw&s">
                 <h2 class="Jackets">Watch</h2>
                 <p>There are wirwless products</p>
                 <p>50$</p>
             </div>
-            <div  id="mouse" class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7EFN97s3zH0rXa2n2JVew_DhZerCA_6hhYw&s">
                 <h2 class="Jackets">Watch</h2>
                 <p>There are beautifull</p>
                 <p>50$</p>
             </div>
-            <div  id="mouse" class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWzHWH7sCkTbBO9kLE1FxraRYwclTo9weJmg&s">
                 <h2 class="Jackets">Watch</h2>
                 <p>There are beautifull</p>
                 <p>50$</p>
             </div>
-            <div  id="mouse" class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpGl4tJN1erQMHqGj_GTZPM4grMkfN29mdaQ&s">
                 <h2 class="Jackets">Watch</h2>
                 <p>There are beautifull</p>
                 <p>50$</p>
             </div>
-            <div  id="mouse" class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSbf4Qx3Qx2A5c7vs1umLTgZHWZXJAkSXwO8w&s">
                 <h2 class="Jackets">Watch</h2>
                 <p>There are wirwless products</p>
                 <p>50$</p>
             </div>
-            <div  id="mouse" class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6GRjWsiJmR48dPB6OZEkswhc59g7zRvym6A&s">
                 <h2 class="Jackets">Watch</h2>
                 <p>There are beautifull</p>
                 <p>50$</p>
             </div>
-            <div id="mouse"  class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ4lqVVJ6GRjdsqMytvPWbBSdYRwftkYubslQ&s">
                 <h2 class="Jackets">Watch</h2>
                 <p>There are beautifull</p>
                 <p>50$</p>
             </div>
-            <div id="mouse"  class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-LDS9JeE6dJLWrlAKpEldEGCWoyIgQ98fpw&s">
                 <h2 class="Jackets">Watch</h2>
                 <p>There are beautifull</p>
                 <p>50$</p>
             </div>
-            <div id="mouse"  class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6zjKnBh0O74BhDTlD6ahS5NagC6pmDMdZhw&s">
                 <h2 class="Jackets">Watch</h2>
                 <p>There are beautifull</p>
                 <p>50$</p>
             </div>
-            <div id="mouse"  class="mouse">
+            <div id="mouse" class="mouse">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsOnpL8a2dc4UElMKjaCUgTQJZNvhQJOjuuw&s">
                 <h2 class="Jackets">Watch</h2>
                 <p>There are beautifull</p>
@@ -359,24 +364,28 @@
                     <h1>Top offers</h1>
                 </div>
                 <div id="produts_lists" class="produts_lists">
-                    <div id="jackets" class="img1">
+                   <a href="/Products .html"> <div id="jackets" class="img1">
                         <img
                             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt3QdhYSm9BKIYl2eDoCSn3EhAX0mqioZ6VA&s">
                         <p>PUMA,Color..</p>
                         <p>50-80% off</p>
-                    </div>
+                    </div></a>
+                    <a href="/iphon_products.html">
                     <div id="jackets" class="img1">
                         <img
                             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRHrs7RO-nKrSvffO4rAuKc0cseW2toTCrs4g&s">
                         <p>i-Phone:12,Color..</p>
                         <p>50% off</p>
                     </div>
+                </a>
+                <a href="/jeans_produts.html">
                     <div id="jackets" class="img1">
                         <img
                             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5kiisWhY9NF5Y6DgUyDRENhe9Z4XWwCXeLQ&s">
                         <p>Jeeans..</p>
                         <p>50% off</p>
                     </div>
+                </a>
                     <div id="jackets" class="img1">
                         <img
                             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiPpj85DwuGawc_MpU_T8lhBhFBm6tSO84lg&s">
@@ -786,59 +795,52 @@
             </div>
             <!-- there are part off img slider 2 type -->
             <div class="slider_type">
-                <img src="https://m.media-amazon.com/images/S/aplus-media-library-service-media/3047770e-c1f8-424e-a223-19752b98fc70.__CR0,5,970,291_PT0_SX600_V1___.jpg">
+                <img
+                    src="https://m.media-amazon.com/images/S/aplus-media-library-service-media/3047770e-c1f8-424e-a223-19752b98fc70.__CR0,5,970,291_PT0_SX600_V1___.jpg">
             </div>
             <!-- there are part off three boxes flex -->
             <div class="main_three_box">
 
                 <div id="margen_bottem" class="three_box">
                     <div id="number_1" class="number_1">
-                        <img
-                            src="https://m.media-amazon.com/images/I/71r0Ysx+oVL._AC_UY218_.jpg">
-                        <p>Realme NARZO N61</p>
+                        <img src="https://m.media-amazon.com/images/I/71r0Ysx+oVL._AC_UY218_.jpg">
+                        <h2>Realme NARZO N61</h2>
                         <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
                     </div>
                     <div id="number_1" class="number_1">
-                        <img
-                            src="https://m.media-amazon.com/images/I/71qblDCyONL._AC_UY218_.jpg">
+                        <img src="https://m.media-amazon.com/images/I/71qblDCyONL._AC_UY218_.jpg">
                         <p>Readmi M4 5G</p>
                         <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
                     </div>
                     <div id="number_1" class="number_1">
-                        <img
-                            src="https://m.media-amazon.com/images/I/71goZuIha-L._AC_UY218_.jpg">
+                        <img src="https://m.media-amazon.com/images/I/71goZuIha-L._AC_UY218_.jpg">
                         <p>Samsung Galaxy S23</p>
                         <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
                     </div>
                     <div id="number_1" class="number_1">
-                        <img
-                            src="https://m.media-amazon.com/images/I/8189mzscM6L._AC_UY218_.jpg">
+                        <img src="https://m.media-amazon.com/images/I/8189mzscM6L._AC_UY218_.jpg">
                         <p>Galaxy M35..</p>
                         <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
                     </div>
                 </div>
                 <div id="box_two" class="three_box">
                     <div class="number_1">
-                        <img
-                            src="https://m.media-amazon.com/images/I/61Famx7xQwL._AC_SY200_.jpg">
+                        <img src="https://m.media-amazon.com/images/I/61Famx7xQwL._AC_SY200_.jpg">
                         <p>Watch</p>
                         <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
                     </div>
                     <div class="number_1">
-                        <img
-                            src="https://m.media-amazon.com/images/I/41BXiWRE6UL._AC_UF480,480_SR480,480_.jpg">
+                        <img src="https://m.media-amazon.com/images/I/41BXiWRE6UL._AC_UF480,480_SR480,480_.jpg">
                         <p>Watch</p>
                         <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
                     </div>
                     <div class="number_1">
-                        <img
-                            src="https://m.media-amazon.com/images/I/5110pPjBQkL._AC_UF480,480_SR480,480_.jpg">
+                        <img src="https://m.media-amazon.com/images/I/5110pPjBQkL._AC_UF480,480_SR480,480_.jpg">
                         <p>Watch</p>
                         <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
                     </div>
                     <div class="number_1">
-                        <img
-                            src="https://m.media-amazon.com/images/I/41lPElL3zQL._AC_UF480,480_SR480,480_.jpg">
+                        <img src="https://m.media-amazon.com/images/I/41lPElL3zQL._AC_UF480,480_SR480,480_.jpg">
                         <p>Watch</p>
                         <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
                     </div>
@@ -980,7 +982,7 @@
                 <p>Cart</p>
             </div>
         </div>
-
+</div>
 </body>
 <script src="/script.js"></script>
 
