--- a/index.html
+++ b/index.html
@@ -364,40 +364,46 @@
                     <h1>Top offers</h1>
                 </div>
                 <div id="produts_lists" class="produts_lists">
-                   <a href="/Products .html"> <div id="jackets" class="img1">
-                        <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt3QdhYSm9BKIYl2eDoCSn3EhAX0mqioZ6VA&s">
-                        <p>PUMA,Color..</p>
-                        <p>50-80% off</p>
-                    </div></a>
-                    <a href="/iphon_products.html">
-                    <div id="jackets" class="img1">
-                        <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRHrs7RO-nKrSvffO4rAuKc0cseW2toTCrs4g&s">
-                        <p>i-Phone:12,Color..</p>
-                        <p>50% off</p>
-                    </div>
-                </a>
-                <a href="/jeans_produts.html">
-                    <div id="jackets" class="img1">
-                        <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5kiisWhY9NF5Y6DgUyDRENhe9Z4XWwCXeLQ&s">
-                        <p>Jeeans..</p>
-                        <p>50% off</p>
-                    </div>
-                </a>
-                    <div id="jackets" class="img1">
-                        <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiPpj85DwuGawc_MpU_T8lhBhFBm6tSO84lg&s">
-                        <p>Apple Buds.</p>
-                        <p>50% off</p>
-                    </div>
-                    <div id="jackets" class="img1">
-                        <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZimJD1bCNfVa4Ya7MVm7Kgdk_tNA39YeLXA&s">
-                        <p>Heater...</p>
-                        <p>50% off</p>
-                    </div>
+                    <a href="/Products .html" style="text-decoration: none; color: black;">
+                        <div id="jackets" class="img1">
+                            <img
+                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt3QdhYSm9BKIYl2eDoCSn3EhAX0mqioZ6VA&s">
+                            <p>PUMA,Color..</p>
+                            <p>50-80% off</p>
+                        </div>
+                    </a>
+                    <a href="/iphon_products.html" style="text-decoration: none; color: black;">
+                        <div id="jackets" class="img1">
+                            <img
+                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRHrs7RO-nKrSvffO4rAuKc0cseW2toTCrs4g&s">
+                            <p>i-Phone:12,Color..</p>
+                            <p>50% off</p>
+                        </div>
+                    </a>
+                    <a href="/jeans_produts.html" style="text-decoration: none; color: black;">
+                        <div id="jackets" class="img1">
+                            <img
+                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5kiisWhY9NF5Y6DgUyDRENhe9Z4XWwCXeLQ&s">
+                            <p>Jeeans..</p>
+                            <p>50% off</p>
+                        </div>
+                    </a>
+                    <a href="/budes_produts.html" style="text-decoration: none; color: black;">
+                        <div id="jackets" class="img1">
+                            <img
+                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiPpj85DwuGawc_MpU_T8lhBhFBm6tSO84lg&s">
+                            <p>Apple Buds.</p>
+                            <p>50% off</p>
+                        </div>
+                    </a>
+                    <a href="/cosmatic_produts.html" style="text-decoration: none; color: black;">
+                        <div id="jackets" class="img1">
+                            <img
+                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUwEYJmVpD6MgdZel6Ev4dNJ_E2MXs9EAocg&s">
+                            <p>Cosmatic...</p>
+                            <p>50% off</p>
+                        </div>
+                    </a>
                 </div>
             </div>
             <!-- there are cart part -->
@@ -982,7 +988,7 @@
                 <p>Cart</p>
             </div>
         </div>
-</div>
+    </div>
 </body>
 <script src="/script.js"></script>
 
