--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="shorts">
-                <a href="/Login.html">
+                <a href="/Login.html" style="text-decoration: none; color: black;">
                     <div class="box">
                         <div class="cart_i">
                             <i class="fa-regular fa-user"></i>
@@ -38,7 +38,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="/cart.html">
+                <a href="/cart.html" style="text-decoration: none; color: black;">
                     <div class="box">
                         <div class="cart_i">
                             <i class="fa-solid fa-cart-shopping"></i>
@@ -48,7 +48,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="/become.html">
+                <a href="/become.html" style="text-decoration: none; color: black;">
                     <div class="box">
                         <div id="Become" class="cart_i">
                             <i class="fa-solid fa-store"></i>
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="parts">
-                    <a href="/index.html">
+                    <a href="/index.html" style="text-decoration: none; color: black;">
                         <p><b>Home</b></p>
                     </a>
                     <p><b>About</b></p>
@@ -430,24 +430,31 @@
             <!-- there are parts of card dow  -->
             <div class="main_three_box">
                 <div class="three_box">
-                    <div id="number_1" class="number_1">
-                        <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwr_C3Oa3NBSgEdbO0aFSoVJQzCmReDpQz4g&s">
-                        <p>Men Jacket..</p>
-                        <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
-                    </div>
+                    <a href="/Products .html" style="text-decoration: none; color: black;">
+                        <div id="number_1" class="number_1">
+                            <img
+                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwr_C3Oa3NBSgEdbO0aFSoVJQzCmReDpQz4g&s">
+                            <p>Men Jacket..</p>
+                            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+                        </div>
+                    </a>
+                    <a href="/men_swetsheet.html" style="text-decoration: none; color: black;">
                     <div id="number_1" class="number_1">
                         <img
                             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQohTgP2I0AoP24ZK4StkalaWvU0xNs5VUFkw&s">
                         <p>Men Sweaters..</p>
                         <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
                     </div>
-                    <div id="number_1" class="number_1">
-                        <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTLqWMzjBee7cnAUSuj_llf-oBmPTv3ihndQ&s">
-                        <p>Men Sweatsheet..</p>
-                        <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
-                    </div>
+                </a>
+
+                        <div id="number_1" class="number_1">
+                            <img
+                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTLqWMzjBee7cnAUSuj_llf-oBmPTv3ihndQ&s">
+                            <p>Men Sweatsheet..</p>
+                            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+                        </div>
+                    
+
                     <div id="number_1" class="number_1">
                         <img
                             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRq3BqYRNU0VHmhzqPWqZS3NZ4wYnKtoLolgA&s">
