--- a/cart.html
+++ b/cart.html
@@ -86,6 +86,11 @@
             </div>
         </div>
     </div>
+
+
+    <div style="margin-top: 80px;" class="cart_page">
+        <h1>hello</h1>
+    </div>
     <!-- there are laste ending page -->
     <div class="ending">
         <div class="flexity">
