--- a/index.html
+++ b/index.html
@@ -439,28 +439,29 @@
                         </div>
                     </a>
                     <a href="/men_swetsheet.html" style="text-decoration: none; color: black;">
-                    <div id="number_1" class="number_1">
-                        <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQohTgP2I0AoP24ZK4StkalaWvU0xNs5VUFkw&s">
-                        <p>Men Sweaters..</p>
-                        <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
-                    </div>
-                </a>
-
+                        <div id="number_1" class="number_1">
+                            <img
+                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQohTgP2I0AoP24ZK4StkalaWvU0xNs5VUFkw&s">
+                            <p>Men Sweaters..</p>
+                            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+                        </div>
+                    </a>
+                    <a href="/men_sherts.html" style="text-decoration: none; color: black;">
                         <div id="number_1" class="number_1">
                             <img
                                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTLqWMzjBee7cnAUSuj_llf-oBmPTv3ihndQ&s">
                             <p>Men Sweatsheet..</p>
                             <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
                         </div>
-                    
-
-                    <div id="number_1" class="number_1">
-                        <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRq3BqYRNU0VHmhzqPWqZS3NZ4wYnKtoLolgA&s">
-                        <p>Men Muffrels..</p>
-                        <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
-                    </div>
+                    </a>
+                    <a href="/men_muflers.html" style="text-decoration: none; color: black;">
+                        <div id="number_1" class="number_1">
+                            <img
+                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRq3BqYRNU0VHmhzqPWqZS3NZ4wYnKtoLolgA&s">
+                            <p>Men Muffrels..</p>
+                            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+                        </div>
+                    </a>
                 </div>
                 <div id="box_two" class="three_box">
                     <div class="number_1">
@@ -544,27 +545,23 @@
             <div class="main_three_box">
                 <div class="three_box">
                     <div id="number_1" class="number_1">
-                        <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQhacOgqJjQwtNEfS6UWR_pNgk7PqU1k213cQ&s">
-                        <p>Hair Straighteners</p>
+                        <img src="https://m.media-amazon.com/images/I/51xqcM6XFAL._AC_UL320_.jpg">
+                        <p>PUMA Men's Tazon 6 FM Shoes</p>
                         <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
                     </div>
                     <div id="number_1" class="number_1">
-                        <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_OGLaWs6eD-y48GkHIMdN4d0QgrbVNrqSyg&s">
-                        <p>Hair Dryers</p>
+                        <img src="https://m.media-amazon.com/images/I/71u1qaNXZ6L._AC_UL320_.jpg">
+                        <p>COSIDRAM Mens Loafer Casual Shoes Comfort Lightweight</p>
                         <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
                     </div>
                     <div id="number_1" class="number_1">
-                        <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdtIL0hqtLSgasVw2yo2AKFKDm8lm28m8I_Q&s">
-                        <p>Grooming Kit</p>
+                        <img src="https://m.media-amazon.com/images/I/71u4ku2v+jL._AC_UL320_.jpg">
+                        <p>DIYJTS Unisex LED Light Up Shoes, Fashion High Top LED</p>
                         <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
                     </div>
                     <div id="number_1" class="number_1">
-                        <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQz_tpGW0ETxIOkqRFF6ztJdKiqUSdiuTWx-A&s">
-                        <p>Hair curless.</p>
+                        <img src="https://m.media-amazon.com/images/I/71CqYXJvr-L._AC_UL320_.jpg">
+                        <p>LED Light Up Wheels Shoes Roller Skates</p>
                         <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
                     </div>
                 </div>
