--- a/men_swetsheet.html
+++ b/men_swetsheet.html
@@ -151,5 +151,30 @@
         </div>
     </div>
     
+     <!-- tere are part off ending_homes -->
+     <div id="ending_flexity" class="ending_flexity">
+        <a href="/index.html">
+            <div class="Home_icone">
+                <i class="fa-solid fa-house"></i>
+                <p>Home</p>
+            </div>
+        </a>
+        <div class="Home_icone">
+            <i class="fa-solid fa-play"></i>
+            <p>Play</p>
+        </div>
+        <div class="Home_icone">
+            <i class="fa-solid fa-layer-group"></i>
+            <p>Categories</p>
+        </div>
+        <div class="Home_icone">
+            <i class="fa-regular fa-user"></i>
+            <p>Account</p>
+        </div>
+        <div class="Home_icone">
+            <i class="fa-solid fa-cart-plus"></i>
+            <p>Cart</p>
+        </div>
+    </div>
 </body>
 </html>
