--- a/Products .html
+++ b/Products .html
@@ -107,7 +107,6 @@
                 <h2>Puma Breand</h2>
                 <p>500$</p>
             </div>
-
             <div id="imgs_jackets" class="imgs_jackets">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROd2aBqSmxLElypUsUYPHTa2sUjtETeH5ufQ&s">
                 <h2>Puma Breand</h2>
@@ -150,6 +149,30 @@
             </div>
         </div>
     </div>
-    
+     <!-- tere are part off ending_homes -->
+     <div id="ending_flexity" class="ending_flexity">
+        <a href="/index.html">
+            <div class="Home_icone">
+                <i class="fa-solid fa-house"></i>
+                <p>Home</p>
+            </div>
+        </a>
+        <div class="Home_icone">
+            <i class="fa-solid fa-play"></i>
+            <p>Play</p>
+        </div>
+        <div class="Home_icone">
+            <i class="fa-solid fa-layer-group"></i>
+            <p>Categories</p>
+        </div>
+        <div class="Home_icone">
+            <i class="fa-regular fa-user"></i>
+            <p>Account</p>
+        </div>
+        <div class="Home_icone">
+            <i class="fa-solid fa-cart-plus"></i>
+            <p>Cart</p>
+        </div>
+    </div>
 </body>
 </html>
