--- a/index.html
+++ b/index.html
@@ -464,12 +464,14 @@
                     </a>
                 </div>
                 <div id="box_two" class="three_box">
-                    <div class="number_1">
-                        <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRL1BBoU608fKyZQYUwiiubYajLOTGq1Lg_Ug&s">
-                        <p>Bed Mattress</p>
-                        <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
-                    </div>
+                    <a href="/Bedmaterial.html" style="text-decoration: none; color: black;">
+                        <div class="number_1">
+                            <img
+                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRL1BBoU608fKyZQYUwiiubYajLOTGq1Lg_Ug&s">
+                            <p>Bed Mattress</p>
+                            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+                        </div>
+                    </a>
                     <div class="number_1">
                         <img
                             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgmkyg9AsxQLGeI7fMuq7zfUafmW6hPPQ2og&s">
@@ -544,11 +546,13 @@
             <!-- there are part off three boxes flex -->
             <div class="main_three_box">
                 <div class="three_box">
-                    <div id="number_1" class="number_1">
-                        <img src="https://m.media-amazon.com/images/I/51xqcM6XFAL._AC_UL320_.jpg">
-                        <p>PUMA Men's Tazon 6 FM Shoes</p>
-                        <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
-                    </div>
+                    <a href="/puma man.html" style="text-decoration: none; color: black;">
+                        <div id="number_1" class="number_1">
+                            <img src="https://m.media-amazon.com/images/I/51xqcM6XFAL._AC_UL320_.jpg">
+                            <p>PUMA Men's Tazon 6 FM Shoes</p>
+                            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+                        </div>
+                    </a>
                     <div id="number_1" class="number_1">
                         <img src="https://m.media-amazon.com/images/I/71u1qaNXZ6L._AC_UL320_.jpg">
                         <p>COSIDRAM Mens Loafer Casual Shoes Comfort Lightweight</p>
